# ElectionApplication-CPP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Candidate.hxx  CandidateResult.cpp  CandidateResult.hxx  Constituency.cpp  Constituency.hxx  County.cpp  County.hxx  ElectionCount  Main.cpp  PollingCenter.hxx  PollingStation.hxx  README.md  ResultsForm34A.hxx  Ward.hxx  database.cpp  database.h
Entities/: CMakeLists.txt  votes_view.hxx
Entities/include/: Candidate.hxx  CandidateResult.hxx  Constituency.hxx  County.hxx  PollingCenter.hxx  PollingStation.hxx  Ward.hxx
Entities/src/: Candidate.cpp  PollingCenter.cpp  PollingStation.cpp  ResultsForm34A.cpp  Ward.cpp
GtkUI/: CMakeLists.txt  ElectionsWindow.cpp  ElectionsWindow.hpp
Repository/: CMakeLists.txt  database.cpp  database.hpp  repository.cpp  repository.hpp
cmake/: StandardProjectSettings.cmake
cmake/Modules/: UseODB.cmake
